# pyatium

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleanup.sh  setup.py
include/: neural_network.h
pyatium/: __init__.py  core.py
src/: bindings.cpp  neural_network.cpp
tests/: test.py
